bk_ida/gccida/c1/flow_delete_block_noexpunge
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flow_delete_block_noexpunge/src/cfgrtl.c:805:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)end[4]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flow_delete_block_noexpunge/src/cfgrtl.c:839:12: error: expected expression
*( _OWORD *)p_pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flow_delete_block_noexpunge/src/cfgrtl.c:839:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)p_pred = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flow_delete_block_noexpunge/src/obj/cfgrtl.o] Error 1
